<resources>
    <string name="app_name">Android Connect4</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="subject">subject mail [data i hora]</string>
    <string name="body_mail">body [valors de log]</string>
    <string name="to_mail">email to ---></string>
    <string name="send">Enviar</string>
    <string name="my_text">MY TEXT</string>
    <string name="alias_field">Alies identificatiu</string>

    <!-- Activity Ajuda-->
    <string name="help_screen">Ajuda Connect4</string>
    <string name="how_to_play">El joc consisteix en anar introduint fitxer en un tauler vertical
        amb l\'objectiu dalinear 4 consecutivesdel color assignat al jugador(roig) abas que el teu oponent.\n\n
        A cada torn, el jugador introdueix una fitxa a la columna triada (sempre i quan no estigui completa),
        i aquesta cau a la posició més baixa possible.\n\n
        Guanya la partida el jugador que el primer aconsegueix alinear 4 fitxes consecutives del seu color en horitzontal,
        vertical o diagonal.\n\n
        Si totes les columnes estan plenes i ningú ha aconseguit alinear-ne 4 fitxes, hi ha empat</string>
    <string name="back_to_menu">Tornar</string>
    <!-- Activity preamble-->
    <string name="preamble_screen">Configuració del joc</string>
    <string name="alias_hint">Jugador_1</string>
    <string name="grid_size_text">Mida de la graella</string>
    <string name="error_size_grid">Error al seleccionar, default = 7 </string>
    <string name="time_control_text">Control de temps</string>
    <string name="time_control_on">ACTIVAT</string>
    <string name="time_control_off">DESACTIVAT</string>
    <!-- Main Activity -->
    <string name="button_help">Ajuda</string>
    <string name="next">Començar el joc</string>
    <string name="button_exit">sortir del joc</string>
    <!-- ????????? Activity -->
    <string name="default_alias"> connect_player</string>


</resources>

