<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UIgame.SenderFragment">

    <!-- TODO: Update blank fragment layout -->
    <!-- data i hora -->

    <EditText
        android:id="@+id/asunto_field"
        android:layout_width="216dp"
        android:layout_height="46dp"
        android:layout_centerInParent="true"
        android:hint="@string/subject"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />
    <!-- valors de log  -->
    <EditText
        android:id="@+id/text_mail"
        android:layout_width="216dp"
        android:layout_height="46dp"
        android:layout_centerInParent="true"
        android:hint="@string/body_mail"
        android:importantForAutofill="no"
        android:inputType="text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />
    <!-- email destinatari -->
    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="66dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E-mail destinatari" />

        <EditText
            android:id="@+id/envaiar_a"
            android:layout_width="216dp"
            android:layout_height="46dp"
            android:layout_centerInParent="true"
            android:ems="10"
            android:hint="@string/to_mail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="correu_exemple@gmail.com"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />
    </LinearLayout>


    <!-- enviar/nova/sortir -->
    <LinearLayout
        android:layout_width="154dp"
        android:layout_height="203dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845">

        <Button
            android:id="@+id/enviar"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.559" />

        <Button
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nova partida"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696" />

        <Button
            android:id="@+id/sortir_joc"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="sortir"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.837" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>